--- a/src/main/resources/templates/header.mustache
+++ b/src/main/resources/templates/header.mustache
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/basket">Basket: <span class="basket-total">{{basketTotal}}</span> item(s)</a>
+            <a class="nav-link" href="/basket">Basket: <span class="basket-total">{{basket.basketTotal}}</span> item(s)</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Home
