Remove action and tests

--- a/src/main/resources/templates/basket.mustache
+++ b/src/main/resources/templates/basket.mustache
@@ -14,7 +14,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                {{#items}}
+                {{#basket.items}}
                     <tr>
                         <td>{{item.title}}</td>
                         <td class="qty">{{qty}}</td>
@@ -26,7 +26,7 @@
                             </form>
                         </td>
                     </tr>
-                {{/items}}
+                {{/basket.items}}
                 </tbody>
             </table>
         </div>
