WIP add jpa based authentication service

--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -12,7 +12,7 @@
                     <label for="password">Password</label>
                     <input required type="password" class="form-control" name="password" id="password" placeholder="*****">
                 </div>
-                <button type="submit" class="btn btn-primary float-right" id="login">Login</button>
+                <button type="submit" class="btn btn-primary float-right" id="sign-in">Sign in</button>
             </form>
         </div>
     </div>
