--- a/src/main/resources/templates/basket.mustache
+++ b/src/main/resources/templates/basket.mustache
@@ -40,15 +40,21 @@
                 <input type="hidden" name="_csrf" value="{{_csrf.token}}">
                 <div class="form-group">
                     <label for="addressLine1">Address Line 1</label>
-                    <input required type="text" class="form-control" name="addressLine1" id="addressLine1" placeholder="Address Line 1">
+                    <input required type="text" class="form-control" name="addressLine1" id="addressLine1"
+                           placeholder="Address Line 1"
+                           value="{{#address}}{{addressLine1}}{{/address}}">
                 </div>
                 <div class="form-group">
-                    <label for="addressLine2">Address Line 1</label>
-                    <input type="text" class="form-control" name="addressLine2" id="addressLine2" placeholder="Address Line 2">
+                    <label for="addressLine2">Address Line 2</label>
+                    <input type="text" class="form-control" name="addressLine2" id="addressLine2"
+                           placeholder="Address Line 2"
+                           value="{{#address}}{{addressLine2}}{{/address}}">
                 </div>
                 <div class="form-group">
                     <label for="postcode">Postcode</label>
-                    <input required type="text" class="form-control" name="postcode" id="postcode" placeholder="Postcode">
+                    <input required type="text" class="form-control" name="postcode" id="postcode"
+                           placeholder="Postcode"
+                           value="{{#address}}{{postcode}}{{/address}}">
                 </div>
                 <button type="submit" class="btn btn-primary float-right" id="complete-order">Complete order</button>
             </form>
