--- a/src/main/resources/templates/footer.mustache
+++ b/src/main/resources/templates/footer.mustache
@@ -9,7 +9,8 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  <script src="vendor/mustache/mustache.min.js"></script>
+  <script src="js/logout.js"></script>
 </body>
 
 </html>
