--- a/src/main/resources/templates/header.mustache
+++ b/src/main/resources/templates/header.mustache
@@ -15,7 +15,6 @@
 
   <!-- Custom styles for this template -->
   <link href="css/shop-homepage.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -44,28 +43,32 @@
             <div class="nav-link">{{email}}
             </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="logout">Logout
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          {{/email}}
-          <li class="nav-item">
-            <a class="nav-link" href="/signup">Sign Up
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          {{^email}}
-          <li class="nav-item">
-            <a class="nav-link" href="/login">Login
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          {{/email}}
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+           <li class="nav-item">
+             <!-- <a class="nav-link" id="logoutLink" href="/logout">Logout
+               <span class="sr-only">(current)</span>
+             </a> -->
+             <form method="post" action="/logout">
+                <input type="hidden" name="_csrf" value="{{_csrf.token}}">
+                <input class="nav-link"  type="submit" value="Logout"/>
+              </form>
+           </li>
+           {{/email}}
+           <li class="nav-item">
+             <a class="nav-link" href="/signup">Sign Up
+               <span class="sr-only">(current)</span>
+             </a>
+           </li>
+           {{^email}}
+           <li class="nav-item">
+             <a class="nav-link" href="/login">Login
+               <span class="sr-only">(current)</span>
+             </a>
+           </li>
+           {{/email}}
+           <li class="nav-item">
+             <a class="nav-link" href="#">About</a>
+           </li>
+         </ul>
+       </div>
+     </div>
+   </nav>
