--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -15,6 +15,9 @@
                 </div>
                 <button type="submit" class="btn btn-primary float-right" id="sign-in">Sign in</button>
             </form>
+            {{#error}}
+                <p class="text-danger">wrong email address or password</p>
+            {{/error}}
         </div>
     </div>
 </div>
